--- a/src/app/components/reservation-form/reservation-form.component.scss
+++ b/src/app/components/reservation-form/reservation-form.component.scss
@@ -22,6 +22,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    position: relative;
 
     label {
       font-weight: 500;
@@ -54,6 +55,13 @@
       &:disabled {
         background-color: #f1f5f9;
         cursor: not-allowed;
+      }
+
+      &.ng-invalid.ng-touched {
+        border-color: #e74c3c;
+        &:focus {
+          box-shadow: 0 0 0 2px rgba(231, 76, 60, 0.2);
+        }
       }
     }
 
@@ -88,10 +96,14 @@
     color: #e74c3c;
     font-size: 0.875rem;
     margin-top: 0.25rem;
+    position: absolute;
+    bottom: -1.5rem;
+    left: 0;
+    white-space: nowrap;
   }
 
   .form-actions {
-    margin-top: 2rem;
+    margin-top: 3rem;
     display: flex;
     justify-content: center;
 
@@ -137,5 +149,11 @@
 
   .form-section {
     grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+
+  .error-message {
+    position: static !important;
+    margin-top: 0.25rem !important;
   }
 }
